# libtelnet

./: CMakeLists.txt  libtelnet.c
doc/: Doxyfile.in
test/: CMakeLists.txt
util/: CMakeLists.txt  telnet-proxy.c
